--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ archives_base_name=all_that_matters
 fabric_version=0.90.4+1.20.2
 rei_version=13.0.671
 energy_api_version=3.0.0
+libgui_version=9.0.0+1.20.2
