--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,6 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.2.0")))
 
     modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
     modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
@@ -66,6 +65,8 @@ dependencies {
     }
 
     modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
+
+    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixinextras_version}")))
 
     modRuntimeOnly "curse.maven:reborncore-237903:4786770"
     modRuntimeOnly "curse.maven:techreborn-233564:4786771"
