--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.2
 yarn_mappings=1.20.2+build.4
 loader_version=0.14.24
-
 # Mod Properties
 mod_version=1.0-1.20.2
 maven_group=jiraiyah.allthatmatters
 archives_base_name=all_that_matters
-
 # Dependencies
 fabric_version=0.90.4+1.20.2
 rei_version=13.0.671
 energy_api_version=3.0.0
 libgui_version=9.0.0+1.20.2
+mixinextras_version=0.2.0
