--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,6 @@ minecraft_version=1.20.2
 yarn_mappings=1.20.2+build.4
 loader_version=0.14.24
 # Mod Properties
-mod_version=1.0.0+MC1.20.2
 maven_group=jiraiyah.allthatmatters
 archives_base_name=all_that_matters
 # Dependencies
@@ -17,4 +16,6 @@ energy_api_version=3.0.0
 libgui_version=9.0.0+1.20.2
 mixinextras_version=0.2.0
 pal_version = 1.9.0
-fluidutils_version=1.3.3-MC1.20.2
+fluidutils_version=1.3.4-MC1.20.2
+# MOD VERSION
+mod_version=1.0.4+MC1.20.2
